name:                tmpemail
version:             0.1.0.0
synopsis:            Wrapper on top of guerrilla mail
description:         Please see README.md
homepage:            https://github.com/joaomilho/tmpemail
license:             MIT
license-file:        LICENSE
author:              Juan Maiz Lulkin
maintainer:          maiz@lulk.in
copyright:           2016 Juan Maiz Lulkin
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                       , wreq
                       , aeson
                       , lens
                       , lens-aeson
                       , unix
                       , aeson-pretty
                       , text
                       , vector
                       , hashmap >= 1.3 && < 1.4
                       , unordered-containers
                       , Hclip
                       , scientific
                       , http-client
                       , bytestring
  default-language:    Haskell2010

executable tmp_email
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tmpemail
  default-language:    Haskell2010

test-suite tmpemail-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tmpemail
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/joaomilho/tmpemail
